# bittern

./: .gitignore  cdk.context.json  cdk.json  jest.config.js  package-lock.json  package.json  pyproject.toml
docs/source/: index.md
docs/source/aws_pipeline/: containerizing_your_code.md  index.md  platform_overview.md
docs/source/smce/: first_time_setup.md
infrastructure/: bittern-base-stack.ts  container-stack.ts  container-step-function-stack.ts  data-hosting-stack.ts  dataset-hosting-stack.ts  lambda-function-stack.ts  nena-base-stack.ts  sftp-endpoint-stack.ts  sftp-server-stack.ts  sftpgo-stack.ts  ssh-users.ts
lib/: bittern-stack.ts
scripts/: example_input_event.json
src/: Dockerfile  container_script.py  lambda_function_example.py
test/: bittern.test.ts
